fixed z-index of chat window on homepage

--- a/style/main.css
+++ b/style/main.css
@@ -1042,6 +1042,11 @@ main .breadcrumbs {
 }
 /* chat bubble */
 
+.chat-wrapper {
+  z-index: 110;
+  position: relative;
+}
+
 .chat-window-toggle {
   display: block;
   position: fixed;
@@ -1077,7 +1082,6 @@ main .breadcrumbs {
   border-radius: 0.5rem;
   overflow: hidden;
   transition: 0.7s cubic-bezier(0.69, -0.43, 0.47, 1.29);
-  z-index: 100;
 }
 
 .chat-header {
